# uncoverrx

./: .gitignore  README.md  build_docker.py  docker-compose.yml
Boundary/: README.md  openapi.json  package.json  schema.ts
Boundary/boundary/: constants.json  openapi.json  schema.ts
Boundary/scripts/: getConstants.js  getDefinition.js
LLM/BioGPT/: pyproject.toml
LLM/ChatGPT/: Dockerfile  pyproject.toml
LLM/ChatGPT/chatgpt/: chatgpt_process.py  settings.py
LLM/ChatGPT/scripts/: package.py
LLM/Coordinator/: Dockerfile  pyproject.toml
LLM/Coordinator/coordinator/: manage.py
LLM/Coordinator/coordinator/coordinator/: settings.py
LLM/Coordinator/coordinator/coordinator_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
LLM/Coordinator/coordinator/query/: models.py  urls.py  views.py
LLM/Coordinator/coordinator/query/dataclasses/: request_exploration_text.py
LLM/Coordinator/coordinator/query/migrations/: 0001_initial.py  0002_alter_queryrequest_result.py  0003_queryrequest_date_request.py
LLM/Coordinator/coordinator/tests/: test_exploration_utils.py
LLM/Coordinator/scripts/: package.py
User/: .eslintrc.js  .pnp.cjs  .yarnrc.yml  Dockerfile  package.json  tsconfig.json
User/scripts/: cleanLock.js  cleanPackages.js  header.js  upPackageVersions.js
