[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = ""
authors = ["Kadhir Mani <kadhirvelm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
library = {path = "../Library", develop=true}
celery = "^5.2.7"
redis = "^4.5.4"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.package:start"
