[tool.poetry]
name = "coordinator"
version = "1.0.0"
description = "The coordinator for all the LLMs"
authors = ["Kadhir Mani <kadhirvelm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.package:start"
lint = "scripts.package:lint"
