[tool.poetry]
name = "coordinator"
version = "1.0.0"
description = "The coordinator for all the LLMs"
authors = ["Kadhir Mani <kadhirvelm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"
library = {path = "../Library", develop=true}
celery = "^5.2.7"
redis = "^4.5.4"
djangorestframework = "^3.14.0"
django-ninja = "^0.21.0"
arrow = "^1.2.3"
redgreenunittest = "^0.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.package:start"
lint = "scripts.package:lint"
create_migration = "scripts.package:create_migration"
test = "scripts.package:test"
